--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">I Am Poor</string>
+<string name="app_name">I Am <b>Poor</b>/string>
+<string name="title">I am <b>Poor</b>!</string>\
+<string name="con_descrip">Image of a coal piece</string>
+
 </resources>
